# Cub3d

./: Makefile  README.md  libcub.h  main.c
MLX42/: meson.build
MLX42/include/MLX42/: MLX42_Int.h
bonus/: directions_bonus.c  libcub_bonus.h  main_bonus.c  movements_bonus.c
checker/: checker.c  checker_lines_and_columns.c  checker_tab.c  checker_texture.c  checker_utils.c
data/: constructors.c  get_data.c  get_hexa_color.c  get_map.c  get_map_utils.c  get_player.c  get_raw_tab.c  get_tab.c  init_display_datas.c
game/: directions.c  movements.c
libft/: Makefile  comp_calloc2.c  comp_check_argc.c  comp_check_ext.c  comp_check_next_char.c  comp_close_fds.c  comp_err_cmd_bash.c  comp_err_syntax_bash.c  comp_error.c  comp_free_mtpstr.c  comp_free_tab.c  comp_rmvchar_str.c  comp_skip_spaces.c  comp_strdup_tab.c  comp_tablen.c  comp_tplstr_join.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  (+25 more)
raycasting/: calc_ray.c  draw.c  raykst.c  set_colors.c
resources/: t1.cub  t2.cub
resources/invalid/: .cub  10.cub  11.cub  12.cub  13.cub  14.cub  15.cub  16.cub  2.cub  4.cub  6.cub  7.cub  8.cub  9.cub
resources/valid/: map2.cub
utils/: free_structs.c  get_next_valid_line.c  get_texture_path.c
